# FileWhisper

./: CLAUDE.md  Dockerfile  Procfile  README.md  extension_popup.html  extension_popup.js  filewhisper-backend.spec  install.ps1  install.sh  main.py  manifest.json  package.json  pyproject.toml  rag.py  requirements.txt  server_launcher.py  setup.py
.github/workflows/: desktop-build.yml
docs/: CNAME  SHOW_HN.md  desktop-release.md  index.html  interest.html
filewhisper/: main.py  rag.py  server_launcher.py
filewhisper/static/: index.html
rag_data/: documents.pkl  index.faiss  sources.json
src-tauri/: tauri.conf.json
static/: index.html
