[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filewhisper"
version = "0.1.0"
description = "Local RAG document assistant server with keyless LLM support."
readme = "README.md"
# Upper bound: fastembed needs >=3.10; rapidocr/onnxruntime don't support 3.14+ yet.
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "fastembed",
    "faiss-cpu",
    "numpy",
    "python-dotenv",
    "langgraph",
    "PyMuPDF",
    "rapidocr-onnxruntime",
]

[project.scripts]
filewhisper = "filewhisper.server_launcher:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["filewhisper*"]

[tool.setuptools.package-data]
filewhisper = ["static/*"]
